2005-03-22  Jakub Steiner <jimmac@ximian.com>

	* *oasis*: got the mime type wrong. s/-x//

2005-03-21  Jakub Steiner <jimmac@ximian.com>

	* gnome-mime-application-x-vnd.oasis.openoffice.database.png
	* gnome-mime-application-x-vnd.oasis.openoffice.drawing.png
	* gnome-mime-application-x-vnd.oasis.openoffice.formula.png
	* gnome-mime-application-x-vnd.oasis.openoffice.presentation.png
	* gnome-mime-application-x-vnd.oasis.openoffice.text-master.png
	* gnome-mime-application-x-vnd.oasis.openoffice.text.png
	* gnome-mime-application-x-vnd.oasis.openoffice.text-web.png: new
	  OOo mime types

2005-03-10  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24}/filesystems/Makefile.am:
	* {16x16,24x24}/filesystems/gnome-fs-locally-shared.png:
	* {16x16,24x24}/filesystems/gnome-fs-share-provate.png: removed
	* {16x16,24x24}/stock/net/Makefile.am:
	* {16x16,24x24}/stock/net/stock_shared-by-me.png:
	* {16x16,24x24}/stock/net/stock_shared-to-me.png: renamed as per
	  Vivek's request

2005-03-07  Rodney Dawes  <dobey@novell.com>

	* configure.in, NEWS: Update for 2.10.0 release

2005-02-28  Rodney Dawes  <dobey@novell.com>

	* configure.in, NEWS: Update for 2.9.92 release

2005-02-23  Jakub Steiner <jimmac@ximian.com>

	* scalable/emblems/emblem-mail.svg: Mail Emblem by 
	  Andreas Nilsson <nisses.mail@home.se>
	
2005-02-08  Jakub Steiner <jimmac@ximian.com>

	* scalable/filesystems/gnome-fs-directory-accept.svg
	* scalable/filesystems/gnome-fs-directory-visiting.svg: properly
	  sized and reflecting the 48x48px rendering. 
	
	* {72x72,96x96}/filesystems/gnome-fs-directory*:
	* {72x72,96x96}/filesystems/gnome-fs-home*: replaced by the scalable
		version

2005-02-08  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24,32x32,48x48}/filesystems/gnome-fs-client.png: 
	  make wallpaper blue consistently across all icons (bug #165860)

2005-02-08  Jakub Steiner <jimmac@ximian.com>

	* 16x16/filesystems/gnome-fs-ftp.png:
	* 16x16/filesystems/gnome-fs-nfs.png: