@@ -1,5 +1,14 @@
 2005-03-22  Jakub Steiner <jimmac@ximian.com>
 
+	* gnome-mime-application-vnd.oasis.opendocument.graphics-template.png
+	* gnome-mime-application-vnd.oasis.opendocument.image.png
+	* gnome-mime-application-vnd.oasis.opendocument.presentation-template.png
+	* gnome-mime-application-vnd.oasis.opendocument.spreadsheet-template.png
+	* gnome-mime-application-vnd.oasis.opendocument.text-template.png:
+		finish the OOo mimetypes. fixes bug #167296
+
+2005-03-22  Jakub Steiner <jimmac@ximian.com>
+
 	* *oasis*: got the mime type wrong. s/-x//
 
 2005-03-21  Jakub Steiner <jimmac@ximian.com>
